--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -7,6 +7,19 @@ includes:
   - getting-started
   - api/biller/index
   - api/biller/auth
+  - api/biller/auth-mfa
+  - api/biller/auto-pay
+  - api/biller/get
+  - api/biller/make-payment
+  - api/biller/search
+  - api/bill/index
+  - api/bill/list
+  - api/bill/overview
+  - api/payment/index
+  - api/payment/add
+  - api/payment/get
+  - api/user/index
+  - api/user/create
 
 search: true
 ---
