--- a/source/stylesheets/_variables2.scss
+++ b/source/stylesheets/_variables2.scss
@@ -29,6 +29,7 @@ $tg-grey: #6c7279;
 $tg-teal: #65d5d9;
 $tg-red: #F36C60;
 $tg-gold: #FFCE89;
+$tg-blue: #2FA0DC;
 $tg-bermuda-green: #7be3bd;
 $base-grey-10: #f4f4f5;
 $base-grey-5: rgba($base-grey-10, .8);
