--- a/source/includes/api/auth/_auth.md.erb
+++ b/source/includes/api/auth/_auth.md.erb
@@ -1,22 +1,16 @@
-## Auth MFA
+## Auth
 
-> Request Example (Question Based MFA)
-
-```json
-{
-  "unbillKey": "<%= config.auth %>",
-  "mfa": [ "Secret Answer" ],
-  "token": "56e1dbb5443b10a3bd403fcf"
-}
-```
-
-> Request Example (Code Based MFA)
+> Request Example
 
 ```json
 {
   "unbillKey": "<%= config.auth %>",
-  "mfa": { "identifier": "12345" },
-  "token": "56e1dbb5443b10a3bd403fcf"
+  "userId": "566595c8ce88ccec69328566",
+  "companyId": "56e1dbb5443b10a3bd403fcf",
+  "form": {
+    "username": "Johnny",
+    "password": "Appleseed"
+  }
 }
 ```
 
@@ -65,20 +59,24 @@
 }
 ```
 
-Some billers require multi-factor authentication (MFA) and the` /biller/auth/step` route is built to submit the additional information needed. Users are first submitted via the standard authenticate process via the `/biller/auth` endpoint, and the MFA data is sent through an additional request to the `/biller/auth/step` route.
-
-For `questions` (Question Based MFA) return the answers formatted as an array of strings. For `list` (Code Based MFA) return the desired option by passing the `identifier` field given to you from the previous authenticate response. Continue to POST to the `/biller/auth/step` with the required answers until a `200` status code is returned. At that point the user will be authenticated and you'll have access to bill data.
+Authenticate a user's bill credentials via Unbill. This process may take anywhere from 15-90 seconds depending on the responsiveness of the company's website. If a `200` status code is returned, no additional MFA is required. If a `201` status code is returned, additional MFA is required to authenticate with the company and must be submitted via the `/auth/step` endpoint.
 
 ### HTTP Request
 
-`POST <%= config.host %>/biller/auth/step`
+`POST <%= config.host %>/auth`
 
 ### Post Parameters
 
 Param | Description
 ----- | -----------
-`token` | Token provided to you from the `/biller/auth` response.
-`mfa` | The extra information needed for MFA authentication.
+`userId` | ID of user being authenticated.
+`companyId` | ID of company being authenticated.
+`form` | Bill credentials to authenticate.
+
+### Testing
+
+Use `unbillUsername` for `form.username` and `unbillPassword` for `form.password`.
+To test an MFA 201 response, pass in a `mfaTest` flag whose value can be `questions` for a question based response, or `list` for a code based response. In this response will be provided the `token` which you can submit to the `/auth/step` endpoint for additional testing.
 
 ### 200 Response Body
 
@@ -92,6 +90,7 @@ Attribute | Description
 
 Attribute | Description
 --------- | -----------
-`token` | Token to be used when stepping through MFA via the `/biller/auth/step` endpoint.
+`token` | Token to be used when stepping through MFA via the `/auth/step` endpoint.
 `type` | The type of MFA being applied. `questions, list`
 `mfa` | List of required MFA to pass.
+
