--- a/source/includes/api/company/_search.md.erb
+++ b/source/includes/api/company/_search.md.erb
@@ -12,7 +12,7 @@
 > 200 Response
 
 ```json
-[<%= config.billerResponseExample %>]
+[<%= config.companyResponseExample %>]
 ```
 
 > 400 Response
@@ -23,11 +23,11 @@
 }
 ```
 
-Search for billers by name.
+Search for companies by name.
 
 ### HTTP Request
 
-`POST <%= config.host %>/biller/search`
+`POST <%= config.host %>/company/search`
 
 ### Post Parameters
 
@@ -39,4 +39,4 @@ Param | Description
 
 Attribute | Description
 --------- | -----------
-<%= config.billerResponseDescription %>
+<%= config.companyResponseDescription %>
