--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -5,19 +5,20 @@ includes:
   - introduction
   - authentication
   - getting-started
-  - api/biller/index
-  - api/biller/auth
-  - api/biller/auth-mfa
-  - api/biller/auto-pay
-  - api/biller/get
-  - api/biller/make-payment
-  - api/biller/search
+  - api/auth/index.md
+  - api/auth/auth.md
+  - api/auth/auth-step.md
   - api/bill/index
-  - api/bill/list
+  - api/bill/detail
   - api/bill/overview
+  - api/company/index
+  - api/company/get
+  - api/company/search
   - api/payment/index
   - api/payment/add
+  - api/payment/autopay
   - api/payment/get
+  - api/payment/make
   - api/user/index
   - api/user/create
 
