--- a/source/includes/api/payment/_make.md.erb
+++ b/source/includes/api/payment/_make.md.erb
@@ -6,7 +6,7 @@
 {
   "unbillKey": "<%= config.auth %>",
   "userId": "566595c8ce88ccec69328566",
-  "billerId": "56e1dbb5443b10a3bd403fcf"
+  "companyId": "56e1dbb5443b10a3bd403fcf"
 }
 ```
 
@@ -14,19 +14,19 @@
 
 ```json
 {
-  "message": "Please provide userId and billerId."
+  "message": "Please provide userId and companyId."
 }
 ```
 
-Make a payment towards this biller's outstanding balance.
+Make a payment towards this company's outstanding balance.
 
 ### HTTP Request
 
-`POST <%= config.host %>/biller/make-payment`
+`POST <%= config.host %>/payment/make`
 
 ### Post Parameters
 
 Param | Description
 ----- | -----------
 `userId` | Unbill user ID.
-`billerId` | Unbill biller ID.
+`companyId` | Unbill company ID.
