--- a/source/includes/api/payment/_autopay.md.erb
+++ b/source/includes/api/payment/_autopay.md.erb
@@ -31,4 +31,4 @@ Param | Description
 ----- | -----------
 `userId` | Unbill user ID.
 `companyId` | Unbill company ID.
-`autoPay` | Whether autopay should be enabled or disabled. `enabled, disabled`
+`autopay` | Whether autopay should be enabled or disabled. `enabled, disabled`
