--- a/source/stylesheets/_variables2.scss
+++ b/source/stylesheets/_variables2.scss
@@ -32,7 +32,7 @@ $tg-gold: #FFCE89;
 $tg-blue: #2FA0DC;
 $tg-bermuda-green: #7be3bd;
 $base-grey-10: #f4f4f5;
-$base-grey-5: rgba($base-grey-10, .8);
+$base-grey-5: #F5F6F6;
 $base-grey-30: #e2e6e8;
 $base-grey-70: #a4aeb3;
 $white: #ffffff;
@@ -74,13 +74,13 @@ $lang-select-pressed-text: $white; // color of language tab text when mouse is p
 
 // SIZES
 ////////////////////
-$nav-width: 230px; // width of the navbar
+$nav-width: 250px; // width of the navbar
 $examples-width: 50%; // portion of the screen taken up by code examples
 $logo-margin: 20px; // margin between nav items and logo, ignored if search is active
 $main-padding: 28px; // padding to left and right of content & examples
 $nav-padding: 10px; // padding to left and right of navbar
 $nav-v-padding: 5px; // padding used vertically around search boxes and results
-$nav-indent: 10px; // extra padding for ToC subitems
+$nav-indent: 20px; // extra padding for ToC subitems
 $code-annotation-padding: 13px; // padding inside code annotations
 $h1-margin-bottom: 21px; // padding under the largest header tags
 $tablet-width: 930px; // min width before reverting to tablet size
@@ -94,8 +94,8 @@ $phone-width: $tablet-width - $nav-width; // min width before reverting to mobil
 }
 
 %nav-font {
-  font-size: 13px;
-  font-weight: 600;
+  font-size: 15px;
+  font-weight: lighter;
 }
 
 %small-font {
