Just a wee bit more padding

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -87,7 +87,7 @@ html, body {
 
   &>.search {
     position: relative;
-    margin: $nav-padding 0;
+    margin: $nav-padding 0 20px;
 
     input {
       background: $nav-active-bg;
