--- a/source/includes/_introduction.md.erb
+++ b/source/includes/_introduction.md.erb
@@ -2,9 +2,27 @@
 
 ## Introduction
 
+> API Host
+
+```
+<%= config.host %>
+```
+
+> Resource URL Patterns
+
+```
+/auth
+/bill
+/company
+/payment
+/user
+```
+
 Welcome! The Unbill API allows developers to receive user-authorized bill data and make payments on behalf of a user. With over 4000 companies and counting, supercharge your platform with the Unbill API. 
 
 Here you will find information on how to integrate with and use the Unbill API. We've tried to make this documentation user-friendly and example-filled, but please [drop us a line](mailto:hello@unbill.us) with any questions. If you're planning to use our API in production, you should take a look at our [privacy policy](http://unbill.us/privacy.html).
+
+The Unbill API uses standard HTTP [verbs](http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html) to communicate and HTTP [response codes](http://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html) to indicate status and errors. All responses come in standard [JSON](http://www.json.org/). The Unbill API is served over HTTPS to ensure data privacy; HTTP is not supported. Every request must include your `unbillKey`.
 
 ## Gaining Access
 
