--- a/source/includes/api/auth/_auth-step.md.erb
+++ b/source/includes/api/auth/_auth-step.md.erb
@@ -1,6 +1,6 @@
 ## Auth MFA
 
-> Request Example (Question Based MFA)
+> Sample Request (Question Based MFA)
 
 ```json
 {
@@ -10,7 +10,7 @@
 }
 ```
 
-> Request Example (Code Based MFA)
+> Sample Request (Code Based MFA)
 
 ```json
 {
