--- a/source/includes/api/user/_create.md.erb
+++ b/source/includes/api/user/_create.md.erb
@@ -1,10 +1,10 @@
 ## Create
 
-> Request Example
+> Sample Request
 
 ```json
 {
-  "unbillKey": "dc220490-e6ee-11e5-8a94-e7385a8d929e",
+  "unbillKey": "<%= config.auth %>",
   "name": {
     "first": "Johnny",
     "last": "Appleseed"
