--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -5,9 +5,9 @@ includes:
   - introduction
   - authentication
   - getting-started
-  - api/auth/index.md
-  - api/auth/auth.md
-  - api/auth/auth-step.md
+  - api/auth/index
+  - api/auth/auth
+  - api/auth/auth-step
   - api/bill/index
   - api/bill/detail
   - api/bill/overview
