--- a/source/includes/api/company/_get.md.erb
+++ b/source/includes/api/company/_get.md.erb
@@ -1,4 +1,4 @@
-## Get
+## Retrieve a company
 
 > Sample Request
 
@@ -36,8 +36,6 @@ Param | Description
 `companyId` | Unbill company ID or partner company ID.
 
 
-### 200 Response Body
+### Returns
 
-Attribute | Description
---------- | -----------
-<%= config.companyResponseDescription %>
+Returns a customer object if a valid `companyId` was provided.
