--- a/source/includes/api/payment/_add.md.erb
+++ b/source/includes/api/payment/_add.md.erb
@@ -1,4 +1,4 @@
-## Add
+## Add a payment method
 
 > Request Credit Card Example
 
@@ -54,3 +54,7 @@ Param | Description
 `routingNumber` | Bank routing number
 `accountNumber` | Bank account number
 `accountType` | Type of bank account `credit, savings`.
+
+### Returns
+
+Returns a `200` status code if the payment method was successfully added. Returns an error otherwise.
