--- a/source/includes/api/payment/_make.md.erb
+++ b/source/includes/api/payment/_make.md.erb
@@ -1,4 +1,4 @@
-## Make Payment
+## Make a payment
 
 > Sample Request
 
@@ -30,3 +30,7 @@ Param | Description
 ----- | -----------
 `userId` | Unbill user ID.
 `companyId` | Unbill company ID.
+
+### Returns
+
+Returns a `200` status code if a payment is successfully scheduled. Returns an error otherwise.
