--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -9,12 +9,16 @@ includes:
   - api/auth/auth
   - api/auth/auth-step
   - api/bill/index
+  - api/bill/object
   - api/bill/detail
   - api/bill/overview
   - api/company/index
+  - api/company/object
   - api/company/get
   - api/company/search
   - api/payment/index
+  - api/payment/card-object
+  - api/payment/bank-object
   - api/payment/add
   - api/payment/autopay
   - api/payment/get
