--- a/source/includes/api/company/_object.md.erb
+++ b/source/includes/api/company/_object.md.erb
@@ -14,10 +14,10 @@ Attribute | Description
 
 The Unbill API provides image URL's for each biller's logo. There are two ideal ways of presenting these logos in your apps.
 
-1. When the `company.logo.background` field is set to false, the logo looks best on a white background.
+1. When the `company.logo.background` field is set to `false`, the logo looks best on a white background.
 
     ![Netflix](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/netflix-logo.png)
 
-2. When the `company.logo.background` field is set to false, the logo looks best as a background image.
+2. When the `company.logo.background` field is set to `true`, the logo looks best as a background image.
 
     ![Varsity House](https://s3-us-west-2.amazonaws.com/cdn.unbill.com/assets/docs/varsity-logo.png)
