--- a/source/includes/api/company/_get.md.erb
+++ b/source/includes/api/company/_get.md.erb
@@ -38,4 +38,4 @@ Param | Description
 
 ### Returns
 
-Returns a customer object if a valid `companyId` was provided.
+Returns a company object if a valid `companyId` was provided.
