--- a/source/includes/_getting-started.md.erb
+++ b/source/includes/_getting-started.md.erb
@@ -36,7 +36,7 @@ To authenticate bills with your users, you may use the following flow.
 ### User Creation
 
 1. User signs up in your app.
-2. Make a request to the `/user/create` endpoint to retrieve a Unbill `userId` to store in your database for future requests.
+2. Make a request to the `/user/create` endpoint to retrieve an Unbill `userId` to store in your database for future requests.
 
 ### Bill Authentication
 
