--- a/source/includes/api/company/_object.md.erb
+++ b/source/includes/api/company/_object.md.erb
@@ -12,7 +12,7 @@ Attribute | Description
 
 ### Logos
 
-The Unbill API provides image URL's for each biller's logo. There are two ideal ways of presenting these logos in your apps.
+The Unbill API provides image URL's for each company's logo. There are two ideal ways of presenting these logos in your apps.
 
 1. When the `company.logo.background` field is set to `false`, the logo looks best on a white background.
 
