--- a/source/includes/api/payment/_autopay.md.erb
+++ b/source/includes/api/payment/_autopay.md.erb
@@ -21,7 +21,7 @@
 
 Enable or disable autopay for a bill.
 
-Some subscription billers, such as Netflix, Hulu, and Spotify require automatic payments to be enabled. If a request to the `/payment/autopay` endpoint is made for one of these billers, a `400` status code will be returned and autopay will not be disabled.
+Some subscription companies, such as Netflix, Hulu, and Spotify require automatic payments to be enabled. If a request to the `/payment/autopay` endpoint is made for one of these companies, a `400` status code will be returned and autopay will not be disabled.
 
 ### HTTP Request
 
