--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -14,6 +14,7 @@ includes:
   - api/bill/overview
   - api/company/index
   - api/company/object
+  - api/company/logos
   - api/company/get
   - api/company/search
   - api/payment/index
