--- a/source/stylesheets/_variables2.scss
+++ b/source/stylesheets/_variables2.scss
@@ -121,6 +121,7 @@ $phone-width: $tablet-width - $nav-width; // min width before reverting to mobil
 %code-font {
   font-family: Consolas, Menlo, Monaco, "Lucida Console", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace, serif;
   line-height: 1.5;
+  font-size: 14px;
   color: $code;
 
   @extend %small-font;
