--- a/source/includes/api/bill/_overview.md.erb
+++ b/source/includes/api/bill/_overview.md.erb
@@ -39,7 +39,7 @@
 }, {
   "bill": {
     "lastPaidAmount": 25,
-    "lastPaymentDate": "2016-03-25T00:00:00.000Z",
+    "lastPaidOn": "2016-03-25T00:00:00.000Z",
     "status": "paid"
   },
   "company": {
