--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -10,6 +10,7 @@ includes:
   - api/auth/auth-step
   - api/bill/index
   - api/bill/object
+  - api/bill/status
   - api/bill/detail
   - api/bill/overview
   - api/company/index
